--- a/static/main.css
+++ b/static/main.css
@@ -14,3 +14,18 @@ body {
   background-color: var(--background-green);
   margin: 0;
 }
+
+.parallax {
+  perspective: 1px;
+  height: 100vh;
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+
+.parallax__layer {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
