--- a/static/main.css
+++ b/static/main.css
@@ -17,7 +17,7 @@ body {
 .parallax {
   perspective: 1px;
   height: 100vh;
-  width: 100vh;
+  width: 100vw;
   overflow-x: hidden;
   overflow-y: auto;
 }
@@ -38,4 +38,13 @@ body {
 }
 .parallax_layer--foreground {
   transform: translateZ(2px) scale(-1);
+}
+
+.description {
+  display: grid;
+  grid-template-columns: 1fr 10px minmax(640px, 320px) 10px 1fr;
+}
+
+.description > * {
+  grid-column: 3/-3;
 }
