--- a/static/main.css
+++ b/static/main.css
@@ -45,7 +45,13 @@ header {
   display: flex;
   justify-content: center;
   margin-top: 90vh;
+}
+
+#title {
   transform: scale(2.5);
+  color: #ffffff;
+
+  border: 1px solid #000000;
 }
 
 .description {
@@ -56,5 +62,6 @@ header {
 
 .description > * {
   grid-column: 3/-3;
+  font-size: 2.5em;
   line-height: 1.5;
 }
