--- a/static/main.css
+++ b/static/main.css
@@ -19,8 +19,9 @@ body {
   margin: 0;
 }
 
-.content {
-
+.locationmarker {
+  position: fixed;
+  top: 226vh;
 }
 
 .parallax {
@@ -55,7 +56,7 @@ body {
 
 #banner-image {
   width: 100%;
-  
+
 }
 
 
@@ -66,7 +67,7 @@ header {
 }
 
 #title {
-  transform: scale(3);
+  transform: scale(2.8);
   color: #ffffff;
 
 }
@@ -77,7 +78,7 @@ header {
   grid-template-columns: 1fr 10px minmax(600px, 320px) 10px 1fr;
 
   margin-top: 200%;
-  margin-bottom: 100em;
+  margin-bottom: 300em;
 }
 
 .description > * {
