--- a/static/main.css
+++ b/static/main.css
@@ -75,7 +75,7 @@ header {
 
 .description {
   display: grid;
-  grid-template-columns: 1fr 10px minmax(600px, 320px) 10px 1fr;
+  grid-template-columns: 1fr 10px minmax(650px, 320px) 10px 1fr;
 
   margin-top: 200%;
   margin-bottom: 300em;
@@ -85,6 +85,7 @@ header {
   grid-column: 3/-3;
   font-size: 2.5em;
   line-height: 1.5;
+  text-align: justify;
   padding: 1em;
 }
 
@@ -106,6 +107,7 @@ button {
   border-radius: 1px;
   transition-duration: .5s;
   -webkit-transition-duration: .5s;
+  font-size: 18px;
 }
 
 button:hover {
