added web design tag

--- a/static/main.css
+++ b/static/main.css
@@ -121,3 +121,11 @@ button:hover {
   padding: 1em;
   margin-bottom: 5em;
 }
+
+#webdesigntag {
+  position: absolute;
+  top: 165vh;
+  font-size: 9px;
+  display: flex;
+  justify-content: space-between;
+}
