--- a/static/main.css
+++ b/static/main.css
@@ -59,11 +59,11 @@ body {
 
 #banner-image1 {
   width: 100%;
-  position: absolute;
 }
 #banner-image2 {
   width: 100%;
-  position: absolute;
+  position: fixed;
+  top: 0;
 }
 
 header {
